added IR Generator, Semantic Analyser with Interpreter

--- a/playground/templates/index.html
+++ b/playground/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DesiLang Playground</title>
+    <title>MeriLang Playground</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
@@ -12,8 +12,8 @@
   <body>
     <div class="container">
       <header>
-        <h1>🇮🇳 DesiLang Playground</h1>
-        <p>Write and execute DesiLang code in your browser</p>
+        <h1>🇮🇳 MeriLang Playground</h1>
+        <p>Write and execute MeriLang code in your browser</p>
       </header>
 
       <div class="controls">
@@ -29,7 +29,7 @@
           <h3>Code Editor</h3>
           <textarea
             id="codeEditor"
-            placeholder='Write your DesiLang code here...
+            placeholder='Write your MeriLang code here...
 shuru
 dikhao "Hello, World!"
 khatam'
@@ -79,7 +79,7 @@ khatam'
       <footer>
         <p>
           Made with ❤️ for the desi community |
-          <a href="https://github.com/XploitMonk0x01/desilang" target="_blank"
+          <a href="https://github.com/XploitMonk0x01/MeriLang" target="_blank"
             >GitHub</a
           >
         </p>
@@ -95,7 +95,7 @@ khatam'
 
       // Default code
       const defaultCode = `shuru
-// Welcome to DesiLang!
+// Welcome to MeriLang!
 dikhao "Hello, World!"
 
 // Try some math
